added Sensor fusion method for angle and Saving data to text file

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Sep 29 23:13:10 IST 2015
+#Tue Oct 06 11:09:34 IST 2015
+systemProp.https.nonProxyHosts=localhost', ' 127.0.0.1', ' iiit.ac.in', '.iiit.ac.in', ' iiit.net', '.iiit.net', ' 172.16.0.0/12', '192.168.0
+systemProp.https.proxyPort=8080
 systemProp.http.proxyHost=proxy.iiit.ac.in
-systemProp.http.nonProxyHosts=localhost;127.0.0.1;172.16.*.*.;172.17.*.*;192.168.*.*;*iiit.ac.in;*iiit.net;10.*
+systemProp.http.nonProxyHosts=localhost', ' 127.0.0.1', ' iiit.ac.in', '.iiit.ac.in', ' iiit.net', '.iiit.net', ' 172.16.0.0/12', '192.168.0
+systemProp.https.proxyHost=proxy.iiit.ac.in
 systemProp.http.proxyPort=8080
