--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
     defaultConfig {
-        applicationId "logger.dapp.com.gps_imudatalogger"
+        applicationId 'dapp.com.gps_imudatalogger'
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -19,6 +19,8 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
     }
 }
 
