--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 01 02:10:50 IST 2015
-sdk.dir=C\:\\Users\\dheeraj\\AppData\\Local\\Android\\sdk
+#Tue Oct 06 11:12:00 IST 2015
+sdk.dir=/home/dheeraj/Android/Sdk
